--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "hubot-scripts": "^2.5.16",
     "hubot-shipit": "^0.1.1",
     "hubot-youtube": "^0.1.2",
-    "hubot-jabbr": "0.4.x"
+    "hubot-aim": "0.0.5"
   },
   "engines": {
     "node": "0.10.x"
